More fucntions on apiai fulfillment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-apiai==1.2.3
+python-telegram-bot==10.0.1
 requests==2.18.1
 urllib3==1.21.1
-python-telegram-bot==10.0.1
 python-dotenv
+apiai==1.2.3
+geopy
+emoji
